--- a/src/index.html
+++ b/src/index.html
@@ -8,48 +8,68 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      /* Set the background color to a dark color */
       color: #ffffff;
     }
     #container {
-      width: 80%;
-      margin: auto;
-      padding: 20px;
+      width: 100%;
+      margin-top: 1.2em;
+      position: absolute;
+    }
+    #container-top {
+      width: 96%;
+      margin-left: 1%;
+      margin-right: 1%;
+      padding-left: .5em;
+      padding-right: .5em;
+      padding-bottom: .1em;
+      padding-top: .55em;
       background-color: #1e1e1e;
       border-radius: 8px;
+      position: relative;
+    }
+    #container-main {
+      width: 96%;
+      margin-left: 1%;
+      margin-right: 1%;
+      margin-top: 1em;
+      padding-top: .5em;
+      padding-left: .3em;
+      padding-right: .3em;
+      padding-bottom: .1em;
+      background-color: #1e1e1e;
+      border-radius: 8px;
+      position: relative;
+    }
+    .input-group {
+      position: relative;
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
     }
     #url {
-      width: 100%;
+      flex: 1;
       padding: 10px;
-      margin-bottom: 10px;
       background-color: #333333;
       color: #ffffff;
       border: 1px solid #444444;
       border-radius: 4px;
+      margin-right: 10px;
     }
-    #fetchButton,
-    #addButton,
-    #saveUrlButton,
-    #deleteUrlButton,
-    #viewUrlButton {
+    #saveUrlButton {
       padding: 10px 20px;
-      margin: 5px;
       background-color: #333333;
       color: #ffffff;
       border: 1px solid #444444;
       border-radius: 4px;
       cursor: pointer;
     }
-    #fetchButton:hover,
-    #addButton:hover,
-    #saveUrlButton:hover,
-    #deleteUrlButton:hover,
-    #viewUrlButton:hover {
+    #saveUrlButton:hover {
       background-color: #444444;
     }
-    #packageList,
     #storedUrlsList {
-      width: 100%;
+      width: 96%;
+      margin-left: auto;
+      margin-right: auto;
       height: 300px;
       background-color: #333333;
       color: #ffffff;
@@ -57,31 +77,71 @@
       border-radius: 4px;
       overflow-y: auto;
       padding: 10px;
+      position: relative;
     }
-    #packageList li,
     #storedUrlsList li {
       padding: 5px;
       cursor: pointer;
     }
-    #packageList li.selected,
     #storedUrlsList li.selected {
       background-color: #555555;
+    }
+    .listing-box {
+      border: 1px solid #444444;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .listing-box .info {
+      display: flex;
+      flex-direction: column;
+    }
+    .listing-box h3 {
+      margin: 0;
+      font-size: 1.2em;
+    }
+    .listing-box p {
+      margin: 5px 0;
+    }
+    .listing-box .latest-version {
+      font-size: 0.8em;
+      color: #aaaaaa;
+    }
+    .version-dropdown {
+      background-color: #333333;
+      color: #ffffff;
+      border: 1px solid #444444;
+      border-radius: 4px;
+      padding: 5px;
+    }
+    #app-version-bubble {
+      position: absolute;
+      top: 0em;
+      right: 0em;
+      background-color: #444444;
+      color: #ffffff;
+      padding: 5px 10px;
+      border-radius: 0 0 0 .4em;
+      font-size: 0.6em;
     }
   </style>
 </head>
 <body>
+  <div id="app-version-bubble">Version: <span id="app-version"></span></div>
   <div id="container">
-    <h1>VCC Listing Manager - 0.0.5</h1>
-    <input type="text" id="url" placeholder="Enter VCC Listing URL">
-    <button id="fetchButton">Fetch Listing</button>
-    <button id="saveUrlButton">Save URL</button>
-    <ul id="packageList"></ul>
-    <button id="addButton">Add Package</button>
-    <h2>Stored URLs</h2>
-    <ul id="storedUrlsList"></ul>
-    <button id="deleteUrlButton">Delete Selected URL</button>
-    <button id="viewUrlButton">View Selected URL</button>
+    <div id="container-top">
+      <div class="input-group">
+        <input type="text" id="url" placeholder="Enter VCC Listing URL">
+        <button id="saveUrlButton">Save Listing</button>
+      </div>
+    </div>
+    <div id="container-main">
+      <ul id="storedUrlsList"></ul>
+    </div>
   </div>
-  <script src="renderer.js"></script>
+<script src="renderer.js"></script>
 </body>
 </html>
