--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
       color: #ffffff;
     }
     #container {
-      width: 100%;
+      left: 0;
+      right: 0;
       margin-top: 1.2em;
       position: absolute;
     }
@@ -82,6 +83,9 @@
     #storedUrlsList li {
       padding: 5px;
       cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     #storedUrlsList li.selected {
       background-color: #555555;
@@ -98,6 +102,7 @@
     .listing-box .info {
       display: flex;
       flex-direction: column;
+      flex: 1;
     }
     .listing-box h3 {
       margin: 0;
@@ -116,6 +121,18 @@
       border: 1px solid #444444;
       border-radius: 4px;
       padding: 5px;
+    }
+    .remove-button {
+      background-color: #ff4444;
+      color: #ffffff;
+      border: none;
+      border-radius: 4px;
+      padding: 5px 10px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+    .remove-button:hover {
+      background-color: #ff6666;
     }
     #app-version-bubble {
       position: absolute;
