--- a/src/index.html
+++ b/src/index.html
@@ -119,10 +119,11 @@
     }
     .listing-box h3 {
       margin: 0;
-      font-size: 1.2em;
+      font-size: 1em;
     }
     .listing-box p {
       margin: 5px 0;
+      font-size: .8em;
     }
     .listing-box .latest-version {
       font-size: 0.8em;
@@ -225,7 +226,7 @@
         </div>
         <div id="project-info-container">
           <div id="project-info">
-            <h3>Project Name: <span id="project-name"></span></h3>
+            <h3>Project Path: <span id="project-name"></span></h3>
             <p>Unity Version: <span id="unity-version"></span></p>
             <h4>Installed Packages:</h4>
             <ul id="installed-packages"></ul>
