--- a/src/index.html
+++ b/src/index.html
@@ -82,12 +82,10 @@
       width: var(--common-width);
       margin-left: auto;
       margin-right: auto;
-      height: 300px;
       background-color: #333333;
       color: #ffffff;
       border: 1px solid #444444;
       border-radius: 4px;
-      overflow-y: auto;
       padding: 10px;
       position: relative;
     }
@@ -237,6 +235,15 @@
     .add-button:hover {
       background-color: #45a049;
     }
+
+    .warning-banner {
+    background-color: #ffcc00;
+    color: #000000;
+    padding: 10px;
+    border-radius: 4px;
+    margin-top: 10px;
+    text-align: center;
+  }
   </style>
 </head>
 <body>
