feat(app): add git logo (for git added packages) and optional version number display if locked to a given branch/release

--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,24 @@
     margin-top: 10px;
     text-align: center;
   }
+
+  .git-logo {
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+    vertical-align: middle;
+  }
+  .info-icons-group { 
+    padding-right: 1em;
+    display: inline-block;
+  }
+
+  .current-version {
+    float: right;
+    margin-left: 10px;
+    font-weight: bold;
+    color: #888;
+  }
   </style>
 </head>
 <body>
