feat(app): add folder icon and version print for packages added directly to the project (not via the vpm/vcc process)

--- a/src/index.html
+++ b/src/index.html
@@ -325,6 +325,11 @@
       margin-left: 5px;
       vertical-align: middle;
     }
+    .folder-icon {
+      height: var(--common-package-logo-height);
+      margin-left: 5px;
+      vertical-align: middle;
+    }
   </style>
 </head>
 
