feat(app): add support for multiple package listings

--- a/src/index.html
+++ b/src/index.html
@@ -325,10 +325,17 @@
       margin-left: 5px;
       vertical-align: middle;
     }
+
     .folder-icon {
       height: var(--common-package-logo-height);
       margin-left: 5px;
       vertical-align: middle;
+    }
+
+    .spacer {
+      width: 2.6em;
+      /* Adjust width to match the remove button */
+      display: inline-block;
     }
   </style>
 </head>
