feat(app): add logic + ui, to link package folders to VCC listings if missing from vpm manifest (based on package name)

--- a/src/index.html
+++ b/src/index.html
@@ -269,6 +269,7 @@
       background-color: #45a049;
     }
 
+    .vcc-listing-relink-button,
     .add-button {
       padding: .8em;
       margin: 5px;
@@ -279,6 +280,7 @@
       cursor: pointer;
     }
 
+    .vcc-listing-relink-button:hover,
     .add-button:hover {
       background-color: #45a049;
     }
