--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,7 @@
       cursor: pointer;
     }
 
+    #storedUnityVersionsList,
     #storedUrlsList,
     #storedProjectsList {
       width: var(--common-width);
@@ -106,6 +107,7 @@
       position: relative;
     }
 
+    #storedUnityVersionsList li,
     #storedUrlsList li,
     #storedProjectsList li {
       padding: 5px;
@@ -115,6 +117,7 @@
       align-items: center;
     }
 
+    #storedUnityVersionsList li.selected,
     #storedUrlsList li.selected,
     #storedProjectsList li.selected {
       background-color: #555555;
