feat(app): add listing of available packages to project info page

--- a/src/index.html
+++ b/src/index.html
@@ -247,6 +247,7 @@
       border-radius: 4px;
     }
 
+    #project-vcc,
     #project-info {
       position: relative;
     }
@@ -404,7 +405,11 @@
             <h4>Installed Packages:</h4>
             <ul id="installed-packages"></ul>
           </div>
+          <div id="projectVCC" class="project-vcc">
+            <ul id="availableVCCPackages"></ul>
+          </div>
         </div>
+      
       </div>
       <div id="vcc-listings" class="tab-content">
         <div class="input-group">
